[package]
name = "espresso-raas-blueprint"
version.workspace = true
edition.workspace = true
description = "A Tangle Blueprint for Espressor RaaS"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
dockworker.workspace = true
blueprint-sdk = { workspace = true, features = ["std", "tangle", "tracing", "macros"] }
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true, features = ["preserve_order"] }
uuid = { workspace = true, features = ["v4", "serde"] }
lazy_static.workspace = true
hex = { workspace = true, features = ["serde"] }

clap = { workspace = true, features = ["derive"], optional = true }
tnt-core-bytecode = { workspace = true, optional = true }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["std", "testing", "tangle"] }
color-eyre.workspace = true
hex-literal.workspace = true

[features]
examples = ["blueprint-sdk/evm", "dep:clap", "dep:tnt-core-bytecode"]

[[example]]
name = "deploy-service"
path = "examples/deploy_service.rs"
required-features = ["examples"]

[[example]]
name = "create-rollup"
path = "examples/create_rollup.rs"
required-features = ["examples"]

[[example]]
name = "list-rollups"
path = "examples/list_rollups.rs"
required-features = ["examples"]


[workspace]
members = ["bin", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Espresso RaaS Blueprint built with Tangle Blueprint SDK"
authors = ["Webb Technologies Inc."]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tangle-network/espresso-raas-blueprint"
repository = "https://github.com/tangle-network/espresso-raas-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.85"

[workspace.dependencies]
espresso-raas-blueprint = { path = "./" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
thiserror = "2.0.12"
color-eyre = "0.6.3"
anyhow = "1.0.97"
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint", default-features = false }
tower = { version = "0.5.2", default-features = false }
tnt-core-bytecode = { version = "0.4.0", default-features = false }
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
dockworker = { git = "https://github.com/tangle-network/dockworker", features = ["docker"] }
firecracker-rs-sdk = { git = "https://github.com/xuehaonan27/firecracker-rs-sdk", features = ["_rt-tokio"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
async-trait = "0.1"
tempfile = "3.10"
reqwest = { version = "0.12.15", features = ["json"] }
futures = "0.3"
dotenv = "0.15.0"
regex = "1.10.2"
walkdir = "2.4.0"
hex = "0.4.3"
hex-literal = "1.0.0"
